--- a/src/frontend/views/home.hbs
+++ b/src/frontend/views/home.hbs
@@ -5,16 +5,20 @@
     <title>Aventuria root page</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles.css">
-
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="resources/styles/general.css">
     <!-- 1. Load libraries -->
     <!-- Polyfill(s) for older browsers -->
     <script src="node_modules/core-js/client/shim.min.js"></script>
     <script src="node_modules/zone.js/dist/zone.js"></script>
     <script src="node_modules/reflect-metadata/Reflect.js"></script>
     <script src="node_modules/systemjs/dist/system.src.js"></script>
+    <script src="node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+
+
     <!-- 2. Configure SystemJS -->
-    <script src="systemjs.config.js"></script>
+    <script src="scripts/systemjs.config.js"></script>
     <script>
         System.import('app').catch(function(err) {
             console.error(err);
@@ -22,11 +26,8 @@
     </script>
 </head>
 
-
-<!-- 3. Display the application -->
-
 <body>
-    <my-app>Loading...</my-app>
+    <av-root>Loading...</av-root>
 </body>
 
 </html>
