--- a/src/frontend/views/home.hbs
+++ b/src/frontend/views/home.hbs
@@ -27,7 +27,7 @@
 </head>
 
 <body>
-    <av-root>Loading...</av-root>
+    <av-root><span class='icon-spinner icon-spin icon-large'></span></av-root>
 </body>
 
 </html>
