--- a/src/frontend/components/userbar/userbar.component.html
+++ b/src/frontend/components/userbar/userbar.component.html
@@ -1,4 +1,22 @@
-<nav class="navbar navbar-fixed-top">
-  <a href="sksks">Login</a>
-  <a href="signup">Signup</a>
+<nav class="sierra-style navbar navbar-fixed-top">
+  <div class="container-fluid">
+
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-navbar-menu" aria-expanded="false">
+         <span class="sr-only">Toggle navigation</span>
+         <span class="glyphicon glyphicon-menu-hamburger"></span>
+       </button>
+    </div>
+
+    <div class="collapse navbar-collapse" id="collapsable-navbar-menu">
+      <ul class="nav navbar-nav">
+        <li>
+          <a href="#login-modal" role="button" data-toggle="collapse" data-target="login-modal" aria-haspopup="true" aria-expanded="false" aria-controls="login-modal">
+            Login
+          </a>
+        </li>
+        <li><a href="signup">Signup</a></li>
+      </ul>
+    </div>
+  </div>
 </nav>
